update styling and correct urls

--- a/css/about-me.css
+++ b/css/about-me.css
@@ -35,6 +35,10 @@ section .heading {
 }
 
 .my-mood img:hover {
-    height: 300px;
-    width: 300px;
+    height: 220px;
+    width: 220px;
+}
+
+.my-neighbor .heading {
+    padding-top: 20px;
 }
