--- a/w1d4/css/form.css
+++ b/w1d4/css/form.css
@@ -1,22 +1,20 @@
-/*html, body, .container-table {*/
-/*    height: 100%;*/
-/*}*/
-/*.container-table {*/
-/*    display: table;*/
-/*}*/
-/*.vertical-center-row {*/
-/*    display: table-cell;*/
-/*    vertical-align: middle;*/
-/*}*/
-
 body {
     margin: 0;
     padding: 0;
 }
-
+form.form1{
+    width: 60%;
+}
+form.form2{
+    width: 80%;
+}
 .content {
     display: grid;
     background-color: #f5f5f5;
     height: 100vh;
     place-items: center;
+}
+
+.bg-classic-blue{
+    background-color: #0f4c81;
 }
