--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@ body {
     color: #0F4C81;
 }
 header h1 {
-    background-color: #798fa8;
+    background-color: #0f4c81;
     border-radius: 18px;
     color: whitesmoke;
     text-align: center;
