--- a/w2d3/forms/css/forms.css
+++ b/w2d3/forms/css/forms.css
@@ -1,6 +1,14 @@
-#clock {
-    font-family: 'Orbitron', sans-serif;
-    color: whitesmoke;
+body {
+    margin: 0;
+    padding: 0;
+}
+
+form.form1 {
+    width: 60%;
+}
+
+form.form2 {
+    width: 80%;
 }
 
 .content {
@@ -8,8 +16,4 @@
     background-color: #f5f5f5;
     height: 100vh;
     place-items: center;
-}
-
-.container {
-    width: 60%;
 }
